Calendar Component Added

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,1 +1,41 @@
-<p>calendar works!</p>
+<div class="card shadow border-0 rounded" >
+    <div class="card-header border-0 m-0 py-2 header-x bg-dark-shade"  > 
+        <h6 class=" text-dark font-weight-bold m-0">
+            Event Calendar
+        </h6>
+    </div>
+    <div class="card-body p-0 m-0" >
+<div class="calendar bg-white px-3 pb-1 pt-3">
+    <div class="d-flex mb-2 align-items-center">
+      <button class="btn my-auto btn-outline btn-outline-secondary btn-sm" (click)="previous()"><b>Prev</b></button>
+      <h2 class="month  my-auto font-weight-bold mb-0 text-uppercase mb-3 text-muted px-3">
+        {{dates[dates.length - 1].date | date : 'MMM' }} {{currentYear}} </h2>
+        <button class="btn my-auto btn-outline btn-outline-secondary btn-sm" (click)="next()"><b>Next</b></button>
+    </div>
+    <!-- <p class="font-italic text-muted mb-5"></p> -->
+    <ol class="day-names list-unstyled pt-2">
+      <li class="font-weight-bold text-muted">Sun</li>
+      <li class="font-weight-bold text-muted">Mon</li>
+      <li class="font-weight-bold text-muted">Tue</li>
+      <li class="font-weight-bold text-muted">Wed</li>
+      <li class="font-weight-bold text-muted">Thu</li>
+      <li class="font-weight-bold text-muted">Fri</li>
+      <li class="font-weight-bold text-muted">Sat</li>
+    </ol>
+
+    <ol class="days list-unstyled">
+      <li *ngFor="let date of dates" >
+        <div class="date p-1 " 
+          [ngClass]="{ normal : date.count == 0 , task : date.count != 0 , today : date.date.getTime() === currentDate.getTime() }">
+            <span class="font-weight-bold {{date.date.getMonth() === currentMonth ? 'daytext' : 'text-dark2' }} p-1 ">
+                {{date.date | date: 'dd'}}
+            </span><br>
+            <span *ngIf="date.count != 0"
+             class="font-weight-bold text-white badge taskText p-2 mx-1 mt-1">
+             {{("0" + date.count ).slice(-2)}} <label class="p-0 m-0 d-none d-md-inline-block">Events</label></span>
+        </div>
+      </li>
+    </ol>
+  </div>
+</div>
+</div>
