--- a/src/app/upcoming-events/upcoming-events.component.html
+++ b/src/app/upcoming-events/upcoming-events.component.html
@@ -1,5 +1,5 @@
-<div class="card shadow border-0 rounded h-100" >
-    <div class="card-header border-0 m-0 p-2 header-x bg-dark-shade"  > 
+<div class="card shadow border-0 rounded " >
+    <div class="card-header border-0 m-0 p-2 header-x bg-dark-shadet"  > 
         <h6 class=" text-dark font-weight-bold m-0">
             Upcoming Events <span class="badge badge-success px-1 mx-1" >
                 {{("0" + upcoming_events.length).slice(-2)}}</span>
