--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -15,7 +15,7 @@
             {{event.description}}
         </p>
         <span class=" badge badge-light text-secondary py-1 mx-1 rounded-0">
-            {{event.start_time.substr(0,5)}} - {{event.end_time.substr(0,5)}}
+            {{event.start_time}} - {{event.end_time}}
         </span>
     </div>
 
