--- a/src/app/upcoming-events/upcoming-events.component.html
+++ b/src/app/upcoming-events/upcoming-events.component.html
@@ -1,17 +1,33 @@
-<div class="card shadow border-0 rounded " >
+<div class="card shadow border-0 rounded" >
     <div class="card-header border-0 m-0 p-2 header-x bg-dark-shadet"  > 
         <h6 class=" text-dark font-weight-bold m-0">
-            Upcoming Events <span class="badge badge-success px-1 mx-1" >
-                {{("0" + upcoming_events.length).slice(-2)}}</span>
+           <span class="bg-success rounded px-2 py-0 text-white small font-weight-bold">Next</span> Event 
         </h6>
     </div>
-    <div class="px-1 py-2 m-0 border-bottom " *ngFor="let event of upcoming_events">
+    <div class="px-1 py-2 m-0 border-bottom " >
+        <h6 class="text-dark py-1 px-1 m-0 small font-weight-bold">{{upcoming_events[0].title}}</h6>
+        <p class="paragraph px-1 mb-1">
+            {{upcoming_events[0].description}}
+        </p>
+        <span class=" badge badge-light text-secondary py-1 mx-1 rounded-0">
+            {{upcoming_events[0].date | date : 'longDate'}}  from  {{upcoming_events[0].start_time | date : 'HH:mm'}} - {{upcoming_events[0].end_time | date : 'HH:mm' }}
+        </span>
+    </div>
+   
+</div>
+<div class="card shadow border-0 rounded mt-3" >
+    <div class="card-header border-0 m-0 p-2 header-x bg-dark-shadet"  > 
+        <h6 class=" text-dark font-weight-bold m-0">
+            Upcoming Events 
+        </h6>
+    </div>
+    <div class="px-1 py-2 m-0 border-bottom " *ngFor="let event of upcoming_events | slice:1">
         <h6 class="text-dark py-1 px-1 m-0 small font-weight-bold">{{event.title}}</h6>
         <p class="paragraph px-1 mb-1">
             {{event.description}}
         </p>
         <span class=" badge badge-light text-secondary py-1 mx-1 rounded-0">
-            {{event.start_time.substr(0,5)}} - {{event.end_time.substr(0,5)}}
+            {{event.date | date : 'longDate'}}  from  {{event.start_time | date : 'HH:mm'}} - {{event.end_time | date : 'HH:mm' }}
         </span>
     </div>
    
